apps/monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: grafana.dev-exploravis.mywire.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
