apps/monitoring/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring 
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: prometheus.dev-exploravis.mywire.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 9090
